Update Blog Post “monolithic-vs-modern-architecture-why-your-growing-app-might-be-silently-breaking”

--- a/posts/monolithic-vs-modern-architecture-why-your-growing-app-might-be-silently-breaking.mdx
+++ b/posts/monolithic-vs-modern-architecture-why-your-growing-app-might-be-silently-breaking.mdx
@@ -14,7 +14,7 @@ tags:
   - Microservices
 seo:
   indexing: true
-  canonicalUrl: https://www.trimsel.com/blog/monolithic-vs-modern-architecture
+  canonicalUrl: ""
   metaTitle: Monolithic vs Modern Architecture | Growth Challenges
   metaDescription: >
     Learn why monolithic apps fail under growth. Discover how modern
